welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:12: error: ';' expected but 'while' found.
    }while(!estSurBiscuit)
     ^SlugSnail:14: error: 'while' expected but '}' found.
}
^SlugSnail:18: error: ':' expected but ')' found.
def isFacingTrail(color):Boolean = {
                       ^SlugSnail:35: error: identifier expected but '}' found.
}
^